2012-05-07  Tobias Burnus  <burnus@net-b.de>

	Backport from mainline:
	2012-05-07  Tobias Burnus  <burnus@net-b.de>

	PR fortran/53255
	* resolve.c (resolve_typebound_static): Fix handling
	of overridden specific to generic operator.

2012-05-05  Tobias Burnus  <burnus@net-b.de>

	Backport from mainline:
	2012-05-04  Tobias Burnus  <burnus@net-b.de>

	PR fortran/53111
	* resolve.c (resolve_fl_derived): Fix -std=f95
	diagnostic for generic vs. DT names.

2012-05-02  Tobias Burnus  <burnus@net-b.de>

	Backport from mainline
	2012-04-12  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52864
	* expr.c (gfc_check_vardef_context): Fix assignment check for
	pointer components.

2012-04-30  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/53148
	Backport from trunk
	* frontend-passes.c (create_var):  If the statement has a label,
	put the label around the block.

2012-04-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/52893
	Backport from trunk
	* frontend-passes.c:  Keep track of wether we are in an implicit
	DO loop; do not do function elimination if we are.

2012-04-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/52668
	Backport from trunk
	* module.c:  Only mark symbols as use_only if they have been
	imported via an only list.

2012-03-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52452
	* resolve.c (resolve_intrinsic): Don't search for a
	function if we know that it is a subroutine.

2012-03-22  Release Manager

	* GCC 4.7.0 released.

2012-03-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52469
	* trans-types.c (gfc_get_function_type): Handle backend_decl
	of a procedure pointer.

2012-02-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/52386
	* trans-expr.c (fcncall_realloc_result): Dereference the
	descriptor if needed.

2012-02-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52335
	* io.c (gfc_match_open): Remove bogus F2003 DELIM= check.

2012-02-18  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52295